...

enum class AppDestinations(
    val label: String,
    val icon: ImageVector,
) {
    CONVERSATION("Conversation", Icons.Filled.Mic),
    TEXT_INPUT("Text Input", Icons.Filled.Translate),
    CAMERA("Camera", Icons.Filled.CameraAlt),
    LANGUAGES("Languages", Icons.Filled.Language),
}

@Composable
fun Greeting(name: String, modifier: Modifier = Modifier) {
...
